--- a/frontend/src/Components/MapContainer.css
+++ b/frontend/src/Components/MapContainer.css
@@ -2,6 +2,7 @@
   flex:1;
   width:100%;
   padding-inline:20px;
+  margin-top: 20px;
 
   display:flex;
   flex-direction:column;
@@ -15,10 +16,9 @@
   }
 
   .map-top-text {
-    margin-top: 15px;
-    margin-bottom: 15px;
     font-weight: 600;
     align-self: flex-start;
+    margin-top: 20px;
   }
 
   .profile-container{
